feature: 调整页面使用的技术

--- a/doc/执行实现步骤.md
+++ b/doc/执行实现步骤.md
@@ -29,7 +29,7 @@
   - 实现关键词搜索接口。
   - 实现基于 articles 表中 embedding 字段的语义搜索接口。
 
-## 2. 前端 (React/Vue/HTML)
+## 2. 前端 (Vue/Vite/HTML)
 
 ### 阶段一：基础界面
 - 环境搭建：
