--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -71,7 +71,7 @@
 ### 获取文章列表
 - 方法：`GET /api/articles`
 - 认证：`Bearer <token>`
-- 查询参数：`limit`, `offset`, `sort`
+- 查询参数：`page`, `size`, `sort`
 - 响应体：
 ```json
 [
