--- a/doc/执行实现步骤.md
+++ b/doc/执行实现步骤.md
@@ -5,6 +5,7 @@
 ## 1. 后端 (java 21/Spring Boot)
 
 ### 阶段一：基础架构
+
 - 数据库搭建：
   - 搭建 PostgreSQL 服务，并创建 users、feeds、user_subscriptions、articles 表。
   - 搭建 MongoDB 服务，准备 user_behavior 文档集。
@@ -14,15 +15,17 @@
   - 实现订阅源的 CRUD 接口。
 
 ### 阶段二：内容处理
+
 - RSS 抓取：
   - 开发后台任务，定期从 feeds 表抓取最新的 RSS 内容。
   - 实现内容清洗逻辑，将 HTML 转换为纯文本。
 - AI 处理：
-  - 接入 AI 服务 API（如 Gemini API）。
+  - 接入 AI 服务 API（如 OpenAI API）。
   - 对抓取到的文章调用 AI 服务，生成摘要、标签、分类和向量化表示。
   - 将 AI 结果存入 articles 表。
 
 ### 阶段三：智能与搜索
+
 - 个性化推荐：
   - 基于 user_behavior 数据，结合向量搜索技术，提供个性化推荐列表。
 - 搜索：
@@ -32,6 +35,7 @@
 ## 2. 前端 (Vue/Vite/HTML)
 
 ### 阶段一：基础界面
+
 - 环境搭建：
   - 创建一个 SPA 项目。
   - 配置 Tailwind CSS。
@@ -41,6 +45,7 @@
   - 设计文章列表组件，用于展示文章概览。
 
 ### 阶段二：功能集成
+
 - 数据交互：
   - 调用后端 API，实现用户登录、登出功能。
   - 实现文章列表的加载和分页功能。
@@ -51,6 +56,7 @@
   - 实现收藏按钮，并调用相应 API。
 
 ### 阶段三：智能体验
+
 - 智能展示：
   - 在文章列表和详情页中展示 AI 生成的摘要、分类和标签。
   - 设计并实现筛选器，让用户按标签和分类筛选文章。
@@ -59,6 +65,7 @@
   - 展示搜索结果，并支持切换搜索类型（关键词/语义）。
 
 ## 3. 部署
+
 - 将后端服务部署到云服务器或容器平台。
 - 将前端应用打包后部署到静态文件服务器。
 - 配置 HTTPS 和域名。
