feature:  feed 增加 最近更新时间

--- a/doc/数据结构文档.md
+++ b/doc/数据结构文档.md
@@ -24,6 +24,7 @@
 | site_url | VARCHAR(255) | NOT NULL | 站点主页 URL |
 | title | VARCHAR(255) |  | 源标题 |
 | last_fetched | TIMESTAMP |  | 上次抓取时间 |
+| last_updated | TIMESTAMP |  | 最近更新时间 |
 
 ### user_subscriptions 表
 
