feature:  api/articles 增加 thumbnail enclosure

--- a/doc/数据结构文档.md
+++ b/doc/数据结构文档.md
@@ -46,6 +46,7 @@
 | author | VARCHAR(255) |  | 文章作者 |
 | description | TEXT |  | 文章摘要或描述 |
 | pub_date | TIMESTAMP | NOT NULL | 发布时间 |
+| thumbnail | TEXT |  | 缩略图链接 |
 | enclosure | TEXT |  | 媒体附件链接（音频、视频等） |
 | content | TEXT | NOT NULL | 清洗后的纯文本md内容 |
 | summary | TEXT | AI Generated | AI 摘要 |
