--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -36,31 +36,41 @@
 ## 1. 用户认证
 
 ### 注册
+
 - 方法：`POST /api/auth/register`
 - 请求体：
+
 ```json
 { "username": "string", "password": "string" }
 ```
+
 - 响应体：
+
 ```json
 { "token": "string", "userId": "string" }
 ```
 
 ### 登录
+
 - 方法：`POST /api/auth/login`
 - 请求体：
+
 ```json
 { "username": "string", "password": "string" }
 ```
+
 - 响应体：
+
 ```json
 { "token": "string", "userId": "string" }
 ```
 
 ### 获取用户信息
+
 - 方法：`GET /api/user`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 { "userId": "string", "username": "string" }
 ```
@@ -68,21 +78,27 @@
 ## 2. 订阅管理
 
 ### 添加订阅
+
 - 方法：`POST /api/subscriptions`
 - 认证：`Bearer <token>`
 - 请求体：
+
 ```json
 { "feedUrl": "string" }
 ```
+
 - 响应体：
+
 ```json
 { "message": "Subscription added." }
 ```
 
 ### 获取订阅列表
+
 - 方法：`GET /api/subscriptions`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 [
   {
@@ -95,14 +111,17 @@
   }
 ]
 ```
+
 - `lastFetched`：后端最近一次抓取该源的时间。
 - `siteUrl`：订阅源对应的网站主页，当缺失时回退至 `url`。
 - `lastUpdated`：RSS 源内容检测到的最近更新时间，用于前端提示源的活跃度。
 
 ### 取消订阅
+
 - 方法：`DELETE /api/subscriptions/:feedId`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 { "message": "Subscription removed." }
 ```
@@ -110,10 +129,12 @@
 ## 3. 文章内容
 
 ### 获取文章列表
+
 - 方法：`GET /api/articles`
 - 认证：`Bearer <token>`
 - 查询参数：`page`（默认 0）、`size`（默认 10）、`sort`（可选，如 `publishedAt,desc`）、`feedId`（可选，用于筛选单个订阅源）
 - 响应体：
+
 ```json
 {
   "content": [
@@ -122,13 +143,19 @@
       "title": "string",
       "link": "string",
       "summary": "string",
+      "thumbnail": "https://example.com/cover.jpg",
+      "enclosure": "https://example.com/audio.mp3",
       "feedTitle": "string",
       "publishedAt": "2024-03-01T10:00:00Z",
       "tags": ["AI", "推荐"],
       "timeAgo": "2 小时前"
     }
   ],
-  "pageable": { "pageNumber": 0, "pageSize": 10, "sort": { "sorted": true, "unsorted": false, "empty": false } },
+  "pageable": {
+    "pageNumber": 0,
+    "pageSize": 10,
+    "sort": { "sorted": true, "unsorted": false, "empty": false }
+  },
   "totalElements": 42,
   "totalPages": 5,
   "last": false,
@@ -140,17 +167,23 @@
   "empty": false
 }
 ```
+- `thumbnail`：用于展示文章缩略图，通常来自 RSS 中的图片资源，可能为空。
+- `enclosure`：原始多媒体资源链接（音频、视频等），可用于播放器或下载。
 
 ### 获取文章详情
+
 - 方法：`GET /api/articles/:articleId`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 {
   "id": "string",
   "title": "string",
   "content": "string",
   "summary": "string",
+  "thumbnail": "https://example.com/cover.jpg",
+  "enclosure": "https://example.com/audio.mp3",
   "feedTitle": "string",
   "publishedAt": "2024-03-01T10:00:00Z",
   "tags": ["AI", "推荐"]
@@ -160,26 +193,32 @@
 ## 4. 用户行为
 
 ### 收藏文章
+
 - 方法：`POST /api/user/collections/:articleId`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 { "message": "Article collected." }
 ```
 
 ### 取消收藏
+
 - 方法：`DELETE /api/user/collections/:articleId`
 - 认证：`Bearer <token>`
 - 响应体：
+
 ```json
 { "message": "Article uncollected." }
 ```
 
 ### 获取收藏列表
+
 - 方法：`GET /api/user/collections`
 - 认证：`Bearer <token>`
 - 查询参数：`page`（默认 0）、`size`（默认 10）、`sort`（可选，如 `collectedAt,desc`）
 - 响应体：
+
 ```json
 {
   "content": [
@@ -189,7 +228,11 @@
       "collectedAt": "2024-03-01T09:30:00Z"
     }
   ],
-  "pageable": { "pageNumber": 0, "pageSize": 10, "sort": { "sorted": true, "unsorted": false, "empty": false } },
+  "pageable": {
+    "pageNumber": 0,
+    "pageSize": 10,
+    "sort": { "sorted": true, "unsorted": false, "empty": false }
+  },
   "totalElements": 12,
   "totalPages": 2,
   "last": false,
@@ -203,23 +246,29 @@
 ```
 
 ### 记录阅读历史
+
 - 方法：`POST /api/user/history`
 - 认证：`Bearer <token>`
 - 请求体：
+
 ```json
 { "articleId": "string", "readAt": "2024-03-01T10:20:00Z" }
 ```
+
 - 说明：`readAt` 可选，未提供时由服务器记录当前时间。
 - 响应体：
+
 ```json
 { "message": "History recorded." }
 ```
 
 ### 获取阅读历史列表
+
 - 方法：`GET /api/user/history`
 - 认证：`Bearer <token>`
 - 查询参数：`page`（默认 0）、`size`（默认 10）、`sort`（默认 `readAt,desc`）
 - 响应体：
+
 ```json
 {
   "content": [
@@ -229,7 +278,11 @@
       "readAt": "2024-03-01T10:20:00Z"
     }
   ],
-  "pageable": { "pageNumber": 0, "pageSize": 10, "sort": { "sorted": true, "unsorted": false, "empty": false } },
+  "pageable": {
+    "pageNumber": 0,
+    "pageSize": 10,
+    "sort": { "sorted": true, "unsorted": false, "empty": false }
+  },
   "totalElements": 58,
   "totalPages": 6,
   "last": false,
@@ -245,6 +298,7 @@
 ## 5. 搜索
 
 ### 搜索文章
+
 - 方法：`GET /api/search`
 - 认证：`Bearer <token>`
 - 查询参数：
@@ -253,6 +307,7 @@
   - `page`（默认 0）
   - `size`（默认 10）
 - 响应体：
+
 ```json
 {
   "content": [
@@ -263,7 +318,11 @@
       "score": 0.87
     }
   ],
-  "pageable": { "pageNumber": 0, "pageSize": 10, "sort": { "sorted": false, "unsorted": true, "empty": true } },
+  "pageable": {
+    "pageNumber": 0,
+    "pageSize": 10,
+    "sort": { "sorted": false, "unsorted": true, "empty": true }
+  },
   "totalElements": 23,
   "totalPages": 3,
   "last": false,
