feature:  api/articles 增加 tags 筛选

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -132,7 +132,7 @@
 
 - 方法：`GET /api/articles`
 - 认证：`Bearer <token>`
-- 查询参数：`page`（默认 0）、`size`（默认 10）、`sort`（可选，如 `publishedAt,desc`）、`feedId`（可选，用于筛选单个订阅源）
+- 查询参数：`page`（默认 0）、`size`（默认 10）、`sort`（可选，如 `publishedAt,desc`）、`feedId`（可选，用于筛选单个订阅源）、`tags`（可选，按标签过滤，多个用逗号分隔）
 - 响应体：
 
 ```json
@@ -169,6 +169,7 @@
 ```
 - `thumbnail`：用于展示文章缩略图，通常来自 RSS 中的图片资源，可能为空。
 - `enclosure`：原始多媒体资源链接（音频、视频等），可用于播放器或下载。
+- `tags` 查询支持逗号分隔的多个标签，忽略大小写。
 
 ### 获取文章详情
 
