feature: 获取订阅内容概览（分类与热门标签）

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -200,6 +200,30 @@
 }
 ```
 
+### 获取订阅内容概览（分类与热门标签）
+
+- 方法：`GET /api/articles/insights`
+- 认证：`Bearer <token>`
+- 查询参数：
+  - `from`（可选，ISO-8601 时间，默认 `now-14d`）
+  - `to`（可选，ISO-8601 时间，默认 `now`）
+  - `top`（可选，热门标签返回个数，默认 20）
+- 说明：统计当前用户可见范围内（其激活的订阅源）的文章，在给定时间窗口内的分类计数和热门标签。
+- 响应体：
+
+```json
+{
+  "categories": [
+    { "category": "Tech", "count": 12 },
+    { "category": "AI", "count": 8 }
+  ],
+  "hotTags": [
+    { "tag": "llm", "count": 10 },
+    { "tag": "java", "count": 7 }
+  ]
+}
+```
+
 ## 4. 订阅源频道
 
 ### 获取订阅源详情
