feature: GET /api/articles support category

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -140,6 +140,7 @@
   - `sort`（可选，如 `publishedAt,desc`）
   - `feedId`（可选，用于筛选单个订阅源）
   - `tags`（可选，按标签过滤，多个用逗号分隔）
+  - `category`（可选，按文章分类过滤，大小写不敏感）
   - `source`（可选，默认 `owner`。`owner`：只返回当前用户的数据；`global`：返回全局数据，不区分用户）
 - 响应体：
 
@@ -179,6 +180,7 @@
 - `thumbnail`：用于展示文章缩略图，通常来自 RSS 中的图片资源，可能为空。
 - `enclosure`：原始多媒体资源链接（音频、视频等），可用于播放器或下载。
 - `tags` 查询支持逗号分隔的多个标签，忽略大小写。
+- `category` 查询按文章 `category` 字段精确匹配（忽略大小写）。
 
 ### 获取文章详情
 
