feature: feed read flag

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -445,6 +445,18 @@
 }
 ```
 
+### 记录feed已读
+
+- 方法：`POST /api/user/readfeed/:feedId`
+- 认证：`Bearer <token>`
+- 响应体：
+
+```json
+{
+  "message": "Feed read."
+}
+```
+
 ## 5. 搜索
 
 ### 搜索文章
