feature: 搜索接口新增字段

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -478,6 +478,9 @@
       "id": "string",
       "title": "string",
       "summary": "string",
+      "thumbnail": "string",
+      "feedTitle": "string",
+      "timeAgo": "2 小时前",
       "score": 0.87
     }
   ],
