feature: feed 增加 avatar

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -127,6 +127,7 @@
     "title": "string",
     "url": "string",
     "siteUrl": "string",
+    "avatar": "https://example.com",
     "lastFetched": "2024-03-01T08:00:00Z",
     "lastUpdated": "2024-03-01T09:45:00Z",
     "isRead": true
@@ -289,6 +290,7 @@
   "title": "string",
   "url": "https://example.com/feed.xml",
   "siteUrl": "https://example.com",
+  "avatar": "https://example.com",
   "lastFetched": "2024-03-01T08:00:00Z",
   "lastUpdated": "2024-03-01T09:45:00Z",
   "latestPublishedAt": "2024-03-01T10:00:00Z",
