--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -231,6 +231,7 @@
   "summary": "string",
   "thumbnail": "https://example.com/cover.jpg",
   "enclosure": "https://example.com/audio.mp3",
+  "feedId": "string",
   "feedTitle": "string",
   "publishedAt": "2024-03-01T10:00:00Z",
   "tags": [
