feature: 个性推荐 + 语义检索 demo

--- a/doc/执行实现步骤.md
+++ b/doc/执行实现步骤.md
@@ -28,6 +28,10 @@
 
 - 个性化推荐：
   - 基于 user_behavior 数据，结合向量搜索技术，提供个性化推荐列表。
+  - 数据准备：引入 `pgvector` 扩展，持久化文章向量到 `article_embeddings`，并实现每日聚合任务生成 `article_daily_metrics` 用于流行度计算。
+  - 召回策略：实现 `ArticleRecommendationRecallService`，融合 ItemCF（按日向量余弦相似）、内容相似（VectorStore 检索）与流行度（多指标衰减打分）候选集。
+  - 合并与服务：实现 `ArticleRecommendationService` 对召回结果归一化打分、控制 feed 多样性，并暴露 `/api/articles/recommendations` 接口（含缓存与推荐理由）。
+  - 离线/实时：新增 `article_similarity` 离线矩阵重建任务与全局热点预热，前端“智能推荐”页面实时消费接口。
 - 搜索：
   - 实现关键词搜索接口。
   - 实现基于 articles 表中 embedding 字段的语义搜索接口。
