feature: 构建用户嵌入，文章嵌入

--- a/doc/数据结构文档.md
+++ b/doc/数据结构文档.md
@@ -56,42 +56,24 @@
 
 ### article_embeddings 表
 
-| 字段        | 数据类型        | 约束                                                  | 描述                        |
-|-----------|-------------|-----------------------------------------------------|---------------------------|
-| id        | UUID        | PRIMARY KEY, DEFAULT uuid_generate_v4() PRIMARY KEY | ID                        |
-| embedding | VECTOR(512) | NOT NULL                                            | 存储向量化表示，供 pg-vector 相似度查询 |
-| content   | text        | NOT NULL                                            | text                      |
-| metadata  | json        | NOT NULL                                            | 元数据                       |
+| 字段        | 数据类型         | 约束                                                  | 描述                        |
+|-----------|--------------|-----------------------------------------------------|---------------------------|
+| id        | UUID         | PRIMARY KEY, DEFAULT uuid_generate_v4() PRIMARY KEY | ID                        |
+| embedding | VECTOR(1024) | NOT NULL                                            | 存储向量化表示，供 pg-vector 相似度查询 |
+| content   | text         | NOT NULL                                            | text                      |
+| metadata  | json         | NOT NULL                                            | 元数据                       |
+
+### user_embeddings 表
+
+| 字段           | 数据类型         | 约束                                            | 描述                        |
+|--------------|--------------|-----------------------------------------------|---------------------------|
+| user_id      | UUID         | PRIMARY KEY, FOREIGN KEY REFERENCES users(id) | 关联的用户 ID                  |
+| embedding    | VECTOR(1024) | NOT NULL                                      | 存储向量化表示，供 pg-vector 相似度查询 |
+| content   | text         | NOT NULL                                            | text                      |
+| updated_at | TIMESTAMP         | NOT NULL                                      | 更新时间                      |
 
 - 该表 https://docs.spring.io/spring-ai/reference/api/vectordbs/pgvector.html 管理。
 - 写入 embedding 时使用 `pgvector` JDBC 扩展，向量维度不匹配将被忽略。
-
-### article_daily_metrics 表
-
-| 字段                | 数据类型      | 约束                                                                                          | 描述         |
-|-------------------|-----------|---------------------------------------------------------------------------------------------|------------|
-| article_id        | UUID      | PRIMARY KEY(article_id, metric_date), FOREIGN KEY REFERENCES articles(id) ON DELETE CASCADE | 文章 ID      |
-| metric_date       | DATE      | PRIMARY KEY(article_id, metric_date)                                                        | 统计日期（UTC）  |
-| collected_count   | BIGINT    | NOT NULL                                                                                    | 当日新增收藏数    |
-| read_count        | BIGINT    | NOT NULL                                                                                    | 当日新增阅读数    |
-| last_collected_at | TIMESTAMP |                                                                                             | 当日最后一次收藏时间 |
-| last_read_at      | TIMESTAMP |                                                                                             | 当日最后一次阅读时间 |
-| updated_at        | TIMESTAMP | NOT NULL                                                                                    | 记录更新时间     |
-
-- `ArticleMetricAggregationService` 每日汇总 MongoDB `user_behavior` 文档写入此表。
-- `ArticleMetricAggregationScheduler` 在 UTC 01:05 触发上一日聚合，重复聚合会先删除同日旧数据再重建。
-
-### article_similarity 表
-
-| 字段                | 数据类型 | 约束                                                                                           | 描述           |
-|-------------------|------|------------------------------------------------------------------------------------------------|--------------|
-| article_id        | UUID | PRIMARY KEY(article_id, similar_article_id), FOREIGN KEY REFERENCES articles(id) ON DELETE CASCADE | 锚点文章 ID     |
-| similar_article_id| UUID | PRIMARY KEY(article_id, similar_article_id), FOREIGN KEY REFERENCES articles(id) ON DELETE CASCADE | 相似文章 ID     |
-| similarity        | DOUBLE PRECISION | NOT NULL                                                                                | 协同相似度       |
-| updated_at        | TIMESTAMP | NOT NULL                                                                                   | 最后更新时间       |
-
-- `ArticleSimilarityRebuildService` 基于 `article_daily_metrics` 余弦相似度每日重建矩阵，写入该表。
-- `ArticleRecommendationRecallService` 优先使用该表提供的 ItemCF 候选，缺失时回退实时计算。
 
 ## 2. MongoDB (动态行为数据)
 
