--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -159,13 +159,13 @@
 - 方法：`GET /api/articles`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `page`（默认 0）
-    - `size`（默认 10）
-    - `sort`（可选，如 `publishedAt,desc`）
-    - `feedId`（可选，用于筛选单个订阅源）
-    - `tags`（可选，按标签过滤，多个用逗号分隔）
-    - `category`（可选，按文章分类过滤，大小写不敏感）
-    - `source`（可选，默认 `owner`。`owner`：只返回当前用户的数据；`global`：返回全局数据，不区分用户）
+  - `page`（默认 0）
+  - `size`（默认 10）
+  - `sort`（可选，如 `publishedAt,desc`）
+  - `feedId`（可选，用于筛选单个订阅源）
+  - `tags`（可选，按标签过滤，多个用逗号分隔）
+  - `category`（可选，按文章分类过滤，大小写不敏感）
+  - `source`（可选，默认 `owner`。`owner`：只返回当前用户的数据；`global`：返回全局数据，不区分用户）
 - 响应体：
 
 ```json
@@ -180,10 +180,7 @@
       "enclosure": "https://example.com/audio.mp3",
       "feedTitle": "string",
       "publishedAt": "2024-03-01T10:00:00Z",
-      "tags": [
-        "AI",
-        "推荐"
-      ],
+      "tags": ["AI", "推荐"],
       "timeAgo": "2 小时前"
     }
   ],
@@ -234,10 +231,7 @@
   "feedId": "string",
   "feedTitle": "string",
   "publishedAt": "2024-03-01T10:00:00Z",
-  "tags": [
-    "AI",
-    "推荐"
-  ]
+  "tags": ["AI", "推荐"]
 }
 ```
 
@@ -246,8 +240,8 @@
 - 方法：`GET /api/articles/recommendations`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `size`（可选，默认 10，最大 30）
-    - `page`（默认 0）
+  - `size`（可选，默认 10，最大 30）
+  - `page`（默认 0）
 - 响应体示例：
 
 ```json
@@ -262,10 +256,7 @@
       "enclosure": "https://example.com/audio.mp3",
       "feedTitle": "string",
       "publishedAt": "2024-03-01T10:00:00Z",
-      "tags": [
-        "AI",
-        "推荐"
-      ],
+      "tags": ["AI", "推荐"],
       "timeAgo": "2 小时前"
     }
   ],
@@ -299,9 +290,9 @@
 - 方法：`GET /api/articles/insights`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `from`（可选，ISO-8601 时间，默认 `now-30d`）
-    - `to`（可选，ISO-8601 时间，默认 `now`）
-    - `top`（可选，热门标签返回个数，默认 20）
+  - `from`（可选，ISO-8601 时间，默认 `now-30d`）
+  - `to`（可选，ISO-8601 时间，默认 `now`）
+  - `top`（可选，热门标签返回个数，默认 20）
 - 说明：统计当前用户可见范围内（其激活的订阅源）的文章，在给定时间窗口内的分类计数和热门标签。
 - 响应体：
 
@@ -362,7 +353,7 @@
 - 方法：`GET /api/feeds/lookup`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `feedUrl`（必填）：订阅源的 RSS 地址。
+  - `feedUrl`（必填）：订阅源的 RSS 地址。
 - 响应体：同 “获取订阅源详情”。
 
 ## 4. 用户行为
@@ -396,9 +387,9 @@
 - 方法：`GET /api/user/collections`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `page`（默认 0）
-    - `size`（默认 10）
-    - `sort`（可选，如 `collectedAt,desc`）
+  - `page`（默认 0）
+  - `size`（默认 10）
+  - `sort`（可选，如 `collectedAt,desc`）
 - 响应体：
 
 ```json
@@ -462,9 +453,9 @@
 - 方法：`GET /api/user/history`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `page`（默认 0）
-    - `size`（默认 10）
-    - `sort`（默认 `readAt,desc`）
+  - `page`（默认 0）
+  - `size`（默认 10）
+  - `sort`（默认 `readAt,desc`）
 - 响应体：
 
 ```json
@@ -501,7 +492,7 @@
 }
 ```
 
-### 记录feed已读
+### 记录 feed 已读
 
 - 方法：`POST /api/user/readfeed/:feedId`
 - 认证：`Bearer <token>`
@@ -520,11 +511,11 @@
 - 方法：`GET /api/search`
 - 认证：`Bearer <token>`
 - 查询参数：
-    - `query`（关键词或自然语言，必填）
-    - `type`（`keyword` 或 `semantic`，可选，默认 `keyword`）
-    - `source`（可选，默认 `owner`。`owner`：只返回当前用户的数据；`global`：返回全局数据，不区分用户）
-    - `page`（默认 0）
-    - `size`（默认 10）
+  - `query`（关键词或自然语言，必填）
+  - `type`（`keyword` 或 `semantic`，可选，默认 `keyword`）
+  - `source`（可选，默认 `owner`。`owner`：只返回当前用户的数据；`global`：返回全局数据，不区分用户）
+  - `page`（默认 0）
+  - `size`（默认 10）
 - 响应体：
 
 ```json
@@ -563,4 +554,21 @@
   "numberOfElements": 10,
   "empty": false
 }
+```
+
+## 6.推荐
+
+### AI 实时推荐（SSE 流）
+
+- 方法：`GET /api/ai/recommendations`
+- 认证：`Bearer <token>`
+- 描述：基于用户历史与偏好生成的实时推荐流。后端使用 Server-Sent Events (SSE) 将推荐项按序推送给客户端，适用于首页或推荐页的增量更新展示。
+- 查询参数：
+  - `scope`（可选，枚举，默认 `PERSONAL`） — 推荐范围；示例值：`PERSONAL`（个性化）、`RECENT`（24 小时）。
+- 返回类型：SSE 文本流（Content-Type: text/event-stream）。每个事件的 `data:` 字段包含一个字符串。
+
+示例：使用 curl 订阅 SSE 流（保持连接以接收连续推荐）：
+
+```bash
+curl -H "Authorization: Bearer <token>" -H "Accept: text/event-stream" "https://your-host/api/ai/recommendations?scope=PERSONAL"
 ```
