feature: 增加 opml文件 导入

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -152,6 +152,82 @@
 }
 ```
 
+### 上传并解析 OPML
+
+- 方法：`POST /api/subscriptions/opml/preview`
+- 认证：`Bearer <token>`
+- 描述：上传 OPML 文件并解析出订阅源列表，返回结果供用户确认。
+- 请求体：`multipart/form-data`
+  - `file`：OPML 文件，建议 `Content-Type` 为 `text/x-opml` 或 `application/xml`
+- 响应体：
+
+```json
+{
+  "feeds": [
+    {
+      "feedUrl": "https://example.com/rss.xml",
+      "title": "string",
+      "siteUrl": "https://example.com",
+      "avatar": "https://example.com/icon.png",
+      "alreadySubscribed": false,
+      "errors": []
+    }
+  ],
+  "warnings": ["string"],
+  "remainingQuota": 480
+}
+```
+
+- `remainingQuota`：可用订阅额度。每个账号默认上限 500 个订阅，该字段为 `500 - 已订阅数量`。
+
+- 响应码：
+  - `200 OK`
+  - `400 Bad Request`（文件缺失、格式不合法或无有效订阅）
+  - `413 Payload Too Large`
+  - `415 Unsupported Media Type`
+
+### 确认 OPML 导入
+
+- 方法：`POST /api/subscriptions/opml/confirm`
+- 认证：`Bearer <token>`
+- 描述：接收预览结果中的订阅源列表并执行导入，仅导入 `selected = true` 的条目。
+- 请求体：
+
+```json
+{
+  "feeds": [
+    {
+      "feedUrl": "https://example.com/rss.xml",
+      "title": "string",
+      "siteUrl": "https://example.com",
+      "avatar": "https://example.com/icon.png",
+      "selected": true
+    }
+  ]
+}
+```
+
+- 响应体：
+
+```json
+{
+  "importedCount": 3,
+  "skipped": [
+    {
+      "feedUrl": "https://example.com/rss.xml",
+      "reason": "ALREADY_SUBSCRIBED"
+    }
+  ],
+  "message": "OPML import completed."
+}
+```
+
+- 响应码：
+  - `200 OK`
+  - `400 Bad Request`（请求体为空或结构不符）
+  - `409 Conflict`（部分条目导入失败，详情见 `skipped`）
+  - `422 Unprocessable Entity`（字段缺失或内容非法）
+
 ## 3. 文章内容
 
 ### 获取文章列表
