feature: 增加 抓取失败信息

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -130,7 +130,9 @@
     "avatar": "https://example.com",
     "lastFetched": "2024-03-01T08:00:00Z",
     "lastUpdated": "2024-03-01T09:45:00Z",
-    "isRead": true
+    "isRead": true,
+    "failureCount": 0,
+    "fetchError": null
   }
 ]
 ```
@@ -139,6 +141,8 @@
 - `siteUrl`：订阅源对应的网站主页，当缺失时回退至 `url`。
 - `lastUpdated`：RSS 源内容检测到的最近更新时间，用于前端提示源的活跃度。
 - `isRead`：当前用户已读。
+- `failureCount`：连续抓取失败次数，成功抓取后会归零。
+- `fetchError`：最近一次抓取失败的错误提示，若暂无失败则为 `null`。
 
 ### 取消订阅
 
@@ -417,12 +421,16 @@
   "latestPublishedAt": "2024-03-01T10:00:00Z",
   "articleCount": 128,
   "subscriberCount": 56,
-  "subscribed": true
+  "subscribed": true,
+  "failureCount": 0,
+  "fetchError": null
 }
 ```
 
 - `latestPublishedAt`：最近一篇文章的发布时间，若暂无文章时退回 `lastUpdated`。
 - `subscribed`：当前用户是否已订阅该源。
+- `failureCount`：连续抓取失败次数，成功抓取后会归零。
+- `fetchError`：最近一次抓取失败的错误提示，若暂无失败则为 `null`。
 
 ### 通过 Feed URL 查询详情
 
