--- a/doc/数据结构文档.md
+++ b/doc/数据结构文档.md
@@ -25,6 +25,10 @@
 | title        | VARCHAR(255) |                  | 源标题        |
 | last_fetched | TIMESTAMP    |                  | 上次抓取时间     |
 | last_updated | TIMESTAMP    |                  | 最近更新时间     |
+| last_fetch_status | VARCHAR(32) | NOT NULL, DEFAULT 'PENDING' | 最近一次抓取结果状态 |
+| fetch_error_at | TIMESTAMP |                  | 最近抓取失败时间（若有） |
+| fetch_error | VARCHAR(2048) |                  | 最近抓取失败的错误信息 |
+| failure_count | INTEGER | NOT NULL, DEFAULT 0 | 连续失败次数，成功抓取后重置 |
 
 ### user_subscriptions 表
 
