feature: 文章详情增加是否收藏字段

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -311,9 +311,12 @@
   "feedId": "string",
   "feedTitle": "string",
   "publishedAt": "2024-03-01T10:00:00Z",
-  "tags": ["AI", "推荐"]
+  "tags": ["AI", "推荐"],
+  "collected": true
 }
 ```
+
+- `collected`：当前用户是否已收藏该文章。
 
 ### 获取推荐文章
 
