调整推荐召回通道占比

--- a/doc/配置参数说明文档.md
+++ b/doc/配置参数说明文档.md
@@ -49,11 +49,11 @@ app:
   ai:
     provider:
       enabled: false
-      endpoint: ''
+      base-url: ''
       api-key: ''
       model: 'gpt-4o-mini'
       embedding:
-        endpoint: '${app.ai.provider.endpoint}'
+        base-url: '${app.ai.provider.base-url}'
         api-key: '${app.ai.provider.api-key}'
         model: 'Qwen/Qwen3-Embedding-4B'
         options:
@@ -128,7 +128,7 @@ app:
 | 参数 | 类型 | 示例值 | 说明 |
 |------|------|--------|------|
 | `enabled` | `boolean` | `false` | 是否启用 AI 模型服务集成。 |
-| `endpoint` | `string` | `''` | AI 模型 API 地址。 |
+| `base-url` | `string` | `''` | AI 模型 API 地址。 |
 | `api-key` | `string` | `''` | AI 服务 API 密钥。 |
 | `model` | `string` | `'gpt-4o-mini'` | 默认对话模型名称。 |
 
@@ -136,7 +136,7 @@ app:
 
 | 参数 | 类型 | 示例值 | 说明 |
 |------|------|--------|------|
-| `endpoint` | `string` | `'${app.ai.provider.endpoint}'` | 嵌入模型服务地址，默认继承主 AI endpoint。 |
+| `base-url` | `string` | `'${app.ai.provider.endpoint}'` | 嵌入模型服务地址，默认继承主 AI endpoint。 |
 | `api-key` | `string` | `'${app.ai.provider.api-key}'` | 嵌入模型的 API 密钥。 |
 | `model` | `string` | `'Qwen/Qwen3-Embedding-4B'` | 嵌入生成模型名称。 |
 | `options.dimensions` | `int` | `1024` | 向量维度大小（embedding 输出维度）。 |
