--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -417,6 +417,7 @@
 {
   "feedId": "string",
   "title": "string",
+  "description": "string",
   "url": "https://example.com/feed.xml",
   "siteUrl": "https://example.com",
   "avatar": "https://example.com",
