--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -79,6 +79,14 @@
 }
 ```
 
+### 登出
+
+- 方法：`POST /api/auth/logout`
+- 认证：`Bearer <token>`（可选）
+- 请求体：无
+- 响应体：无内容（204 No Content）
+- 说明：登出当前用户会话，使 token 失效。如果提供了有效的 Authorization 头，服务器会将该 token 标记为失效。
+
 ### 获取用户信息
 
 - 方法：`GET /api/user`
@@ -405,7 +413,7 @@
 }
 ```
 
-## 4. 订阅源频道
+## 5. 订阅源频道
 
 ### 获取订阅源详情
 
@@ -476,7 +484,7 @@
   - `feedUrl`（必填）：订阅源的 RSS 地址。
 - 响应体：同 “获取订阅源详情”。
 
-## 4. 用户行为
+## 6. 用户行为
 
 ### 收藏文章
 
@@ -624,7 +632,7 @@
 }
 ```
 
-## 5. 搜索
+## 7. 搜索
 
 ### 搜索文章
 
@@ -676,7 +684,7 @@
 }
 ```
 
-## 6.推荐
+## 8. 推荐
 
 ### AI 实时推荐（SSE 流）
 
